<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:context=".MainActivity">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/songList"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_card_view_height"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                card_view:cardCornerRadius="4dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/activity_library"
                    android:src="@drawable/ic_library_music" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_text_songs"
                    android:textSize="18sp" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/songPlaylist"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_card_view_height"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                card_view:cardCornerRadius="4dp"
                card_view:layout_constraintEnd_toStartOf="@id/songAlbums"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/songList">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/activity_playlist"
                    android:src="@drawable/ic_playlist_play" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_text_playlist"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/songAlbums"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_card_view_height"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                card_view:cardCornerRadius="4dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/songPlaylist"
                card_view:layout_constraintTop_toBottomOf="@id/songList">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/activity_albums"
                    android:src="@drawable/ic_album" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text="@string/activity_text_albums"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>